--- a/public/404.html
+++ b/public/404.html
@@ -35,7 +35,7 @@
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
+<li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -57,8 +57,12 @@
 <li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="//localhost:1313/character-creation/quick-start/">Quick Start</a></li>
-<li class=""><a href="//localhost:1313/character-creation/races/">Races</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/brathe/">Brathe</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/paradisi/">Paradisi</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
 </li>
@@ -86,6 +90,7 @@
 <li class=" has-sub-menu"><a href="//localhost:1313/faith/">Faith<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/faith/abstracts/">Abstracts</a></li>
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
 </ul>
   
