--- a/public/faith/index.html
+++ b/public/faith/index.html
@@ -39,7 +39,7 @@
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
+<li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -49,7 +49,7 @@
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Faith%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/history/" title="History"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - History</a>
-<a class="nav nav-next" href="//localhost:1313/faith/organized/" title="Organized Faiths">Next - Organized Faiths <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="//localhost:1313/faith/abstracts/" title="Abstracts">Next - Abstracts <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
 </main>
@@ -66,9 +66,11 @@
 <li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/geography/dragons/brathe/">Brathe</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/paradisi/">Paradisi</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -97,6 +99,7 @@
 <li class=" active has-sub-menu"><a href="//localhost:1313/faith/">Faith<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/faith/abstracts/">Abstracts</a></li>
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
 </ul>
   
