--- a/public/faith/organized/index.html
+++ b/public/faith/organized/index.html
@@ -43,7 +43,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
+<li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -64,7 +64,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <p>Similar to those who believe that all Dragons are gods, these follower specifically believe that King Padrish, the Tricorn King, is not dead and his power still exists tangibly in the world.</p>
 <div class="edit-meta">
 
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Faith%5corganized.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/faith/" title="Faith"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Faith</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Faith%5corganized.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/faith/abstracts/" title="Abstracts"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Abstracts</a>
 <a class="nav nav-next" href="//localhost:1313/character-creation/" title="Character Creation">Next - Character Creation <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -82,9 +82,11 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/geography/dragons/brathe/">Brathe</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
-<li class=""><a href="//localhost:1313/geography/dragons/sola/">Sola</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/paradisi/">Paradisi</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -113,6 +115,7 @@ Crown: The second largest faith, they believe those with Crowns are living gods,
 <li class="parent has-sub-menu"><a href="//localhost:1313/faith/">Faith<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/faith/abstracts/">Abstracts</a></li>
 <li class="active"><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
 </ul>
   
