--- a/public/geography/dragons/index.html
+++ b/public/geography/dragons/index.html
@@ -19,20 +19,20 @@
 <meta property="og:url" content="//localhost:1313/geography/dragons/">
   <meta property="og:site_name" content="The Shattered Lands of Tu&#39;um  Mundi">
   <meta property="og:title" content="Dragons">
-  <meta property="og:description" content="Witch King Gil-Ger-Ach Before ever getting his Crown he was a great mage. He took his Crown by force from the King who came before, winning it in a duel. He used his newfound power to become the greatest mage in existence. His country is very ordered and hordes the knowledge and wealth that it creates and finds.
-Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep, becoming the strongest fighter in the land. He put in place few rules and lets the country run as it will - Anarchy.">
+  <meta property="og:description" content="Witch King Gil-Ger-Ach Before ever getting his Crown he was a great mage. He took his Crown by force from the King who came before, winning it in a duel. He used his newfound power to become the greatest mage in existence. His country is very ordered and hordes the knowledge and wealth that it creates and finds. Rules Centra
+Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep, becoming the strongest fighter in the land. He put in place few rules and lets the country run as it will - Anarchy. Rules Lomb">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Dragons">
-  <meta name="twitter:description" content="Witch King Gil-Ger-Ach Before ever getting his Crown he was a great mage. He took his Crown by force from the King who came before, winning it in a duel. He used his newfound power to become the greatest mage in existence. His country is very ordered and hordes the knowledge and wealth that it creates and finds.
-Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep, becoming the strongest fighter in the land. He put in place few rules and lets the country run as it will - Anarchy.">
+  <meta name="twitter:description" content="Witch King Gil-Ger-Ach Before ever getting his Crown he was a great mage. He took his Crown by force from the King who came before, winning it in a duel. He used his newfound power to become the greatest mage in existence. His country is very ordered and hordes the knowledge and wealth that it creates and finds. Rules Centra
+Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep, becoming the strongest fighter in the land. He put in place few rules and lets the country run as it will - Anarchy. Rules Lomb">
 
   <meta itemprop="name" content="Dragons">
-  <meta itemprop="description" content="Witch King Gil-Ger-Ach Before ever getting his Crown he was a great mage. He took his Crown by force from the King who came before, winning it in a duel. He used his newfound power to become the greatest mage in existence. His country is very ordered and hordes the knowledge and wealth that it creates and finds.
-Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep, becoming the strongest fighter in the land. He put in place few rules and lets the country run as it will - Anarchy.">
-  <meta itemprop="wordCount" content="308"></head>
+  <meta itemprop="description" content="Witch King Gil-Ger-Ach Before ever getting his Crown he was a great mage. He took his Crown by force from the King who came before, winning it in a duel. He used his newfound power to become the greatest mage in existence. His country is very ordered and hordes the knowledge and wealth that it creates and finds. Rules Centra
+Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep, becoming the strongest fighter in the land. He put in place few rules and lets the country run as it will - Anarchy. Rules Lomb">
+  <meta itemprop="wordCount" content="320"></head>
 <body>
 
 <div class="container"><header>
@@ -42,30 +42,30 @@ Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
+<li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
 
 <div class="content-container">
 <main><h1>Dragons</h1><h3 id="witch-king-gil-ger-ach">Witch King Gil-Ger-Ach</h3>
-<p>Before ever getting his Crown he was a great mage. He took his Crown by force from the King who came before, winning it in a duel. He used his newfound power to become the greatest mage in existence. His country is very ordered and hordes the knowledge and wealth that it creates and finds.</p>
+<p>Before ever getting his Crown he was a great mage. He took his Crown by force from the King who came before, winning it in a duel. He used his newfound power to become the greatest mage in existence. His country is very ordered and hordes the knowledge and wealth that it creates and finds. Rules <a href="./centra">Centra</a></p>
 <h3 id="sword-king-solomon">Sword King Solomon</h3>
-<p>A dedicated swordsman who killed the last Dragon in her sleep, becoming the strongest fighter in the land. He put in place few rules and lets the country run as it will - Anarchy.</p>
+<p>A dedicated swordsman who killed the last Dragon in her sleep, becoming the strongest fighter in the land. He put in place few rules and lets the country run as it will - Anarchy. Rules <a href="./Lomb">Lomb</a></p>
 <h3 id="smith-king-dravon">Smith King Dravon</h3>
-<p>He found his crown while searching for a mithral vein in a forgotten dungeon, and he uses his Crown to create artifacts of immense power. Rules over an empire of creation that generates incredible wealth, but is run by a council filled with people he picked.</p>
+<p>He found his crown while searching for a mithral vein in a forgotten dungeon, and he uses his Crown to create artifacts of immense power. Rules over an empire of creation that generates incredible wealth, but is run by a council filled with people he picked. Rules <a href="./mithral">Mithral</a></p>
 <h3 id="grass-queen-losara">Grass Queen Losara</h3>
-<p>Found her Crown at the top of a mountain on the skull of its previous owner. Rules an incredibly peaceful nation and uses her power to grow great amounts of crop: food, materials, flowers. A great farmer before she ever got her Crown, she rules as a dictator and demands non-violence.</p>
+<p>Found her Crown at the top of a mountain on the skull of its previous owner. Rules an incredibly peaceful nation and uses her power to grow great amounts of crop: food, materials, flowers. A great farmer before she ever got her Crown, she rules as a dictator and demands non-violence. Rules <a href="./paradisi">Paradisi</a></p>
 <h3 id="rot-queen-axsolar">Rot Queen Axsolar</h3>
 <p>An adventurer cursed by a great magical beast, she killed the last Dragon to use the crown to cure herself, but Crowns do not grant knowledge, only power, and she was unable to understand her curse, instead she uses the power to persist against death. In doing so, she corrupts her lands and people, condeming them to horror and suffering.</p>
 <h3 id="bright-queen-thela">Bright Queen Thela</h3>
-<p>Longest ruling Dragon, survived the shattering and built the largest empire in the post-shattered world.</p>
+<p>Longest ruling Dragon, survived the shattering and built the largest empire in the post-shattered world. Rules <a href="./thel">Thel</a></p>
 <h3 id="novaral-the-rebel">Novaral The Rebel</h3>
-<p>Took their Crown in a fair fight after challenging their emperor, who they were a consort for before. Used it to become an incredibly powerful fighter.</p>
+<p>Took their Crown in a fair fight after challenging their emperor, who they were a consort for before. Used it to become an incredibly powerful fighter. Rules <a href="./brathe">Brathe</a></p>
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cDragons%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/" title="Places and Factions"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Places and Factions</a>
-<a class="nav nav-next" href="//localhost:1313/geography/dragons/centra/" title="Centra">Next - Centra <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="//localhost:1313/geography/dragons/brathe/" title="Brathe">Next - Brathe <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
 </main>
@@ -82,9 +82,11 @@ Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep
 <li class=" active has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/geography/dragons/brathe/">Brathe</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/paradisi/">Paradisi</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -113,6 +115,7 @@ Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep
 <li class=" has-sub-menu"><a href="//localhost:1313/faith/">Faith<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/faith/abstracts/">Abstracts</a></li>
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
 </ul>
   
