--- a/public/geography/dragons/mithral/index.html
+++ b/public/geography/dragons/mithral/index.html
@@ -43,7 +43,7 @@ The Smith King’s influence covers the entire mountain range. Under his protect
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
+<li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -58,7 +58,7 @@ The Smith King’s influence covers the entire mountain range. Under his protect
 <div class="edit-meta">
 
 <br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cDragons%5cmithral.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/dragons/lomb/" title="Lomb"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Lomb</a>
-<a class="nav nav-next" href="//localhost:1313/geography/dragons/thel/" title="Thel">Next - Thel <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="//localhost:1313/geography/dragons/paradisi/" title="Paradisi">Next - Paradisi <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
 </main>
@@ -75,9 +75,11 @@ The Smith King’s influence covers the entire mountain range. Under his protect
 <li class="parent has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/geography/dragons/brathe/">Brathe</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class="active"><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/paradisi/">Paradisi</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -106,6 +108,7 @@ The Smith King’s influence covers the entire mountain range. Under his protect
 <li class=" has-sub-menu"><a href="//localhost:1313/faith/">Faith<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/faith/abstracts/">Abstracts</a></li>
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
 </ul>
   
