--- a/public/geography/dragons/thel/index.html
+++ b/public/geography/dragons/thel/index.html
@@ -43,7 +43,7 @@ Population The land has a population of just over a million people total spread 
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
+<li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -68,7 +68,7 @@ The Queen&rsquo;s Chosen  regularly patrol the road, and stocked forts can be fo
 <p>Ebelburg</p>
 <div class="edit-meta">
 
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cDragons%5cthel.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/dragons/mithral/" title="Mithral"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Mithral</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Geography%5cDragons%5cthel.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="//localhost:1313/geography/dragons/paradisi/" title="Paradisi"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Paradisi</a>
 <a class="nav nav-next" href="//localhost:1313/geography/free-peoples/" title="Free Peoples">Next - Free Peoples <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -86,9 +86,11 @@ The Queen&rsquo;s Chosen  regularly patrol the road, and stocked forts can be fo
 <li class="parent has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark opened">-</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/geography/dragons/brathe/">Brathe</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/paradisi/">Paradisi</a></li>
 <li class="active"><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -117,6 +119,7 @@ The Queen&rsquo;s Chosen  regularly patrol the road, and stocked forts can be fo
 <li class=" has-sub-menu"><a href="//localhost:1313/faith/">Faith<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/faith/abstracts/">Abstracts</a></li>
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
 </ul>
   
