--- a/public/geography/free-peoples/loch/index.html
+++ b/public/geography/free-peoples/loch/index.html
@@ -40,7 +40,7 @@
 <nav>
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
-<li id="map" class=""><a href="./images/maps/tuummundis.png">Map</a></li>
+<li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
 <li id="foundry" class=""><a href="">Foundry</a></li></ul>
 </nav>
 </div>
@@ -69,9 +69,11 @@ The school is extremely well regarded and enjoys customers from all across the c
 <li class=" has-sub-menu"><a href="//localhost:1313/geography/dragons/">Dragons<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/geography/dragons/brathe/">Brathe</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/centra/">Centra</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/lomb/">Lomb</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/mithral/">Mithral</a></li>
-<li class=""><a href="//localhost:1313/geography/dragons/sola/">Sola</a></li>
+<li class=""><a href="//localhost:1313/geography/dragons/paradisi/">Paradisi</a></li>
 <li class=""><a href="//localhost:1313/geography/dragons/thel/">Thel</a></li>
 </ul>
   
@@ -100,6 +102,7 @@ The school is extremely well regarded and enjoys customers from all across the c
 <li class=" has-sub-menu"><a href="//localhost:1313/faith/">Faith<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="//localhost:1313/faith/abstracts/">Abstracts</a></li>
 <li class=""><a href="//localhost:1313/faith/organized/">Organized Faiths</a></li>
 </ul>
   
