--- a/public/character-creation/index.html
+++ b/public/character-creation/index.html
@@ -49,7 +49,7 @@ And you shall have it, just talk to me because there’s some specific lore abou
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
