--- a/public/character-creation/quick-start/index.html
+++ b/public/character-creation/quick-start/index.html
@@ -47,7 +47,7 @@ Nations The world is divided between 7 nations led by god-kings who possess extr
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
