--- a/public/geography/dragons/index.html
+++ b/public/geography/dragons/index.html
@@ -43,7 +43,7 @@ Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
@@ -124,8 +124,6 @@ Sword King Solomon A dedicated swordsman who killed the last Dragon in her sleep
 <li class=" has-sub-menu"><a href="//localhost:1313/character-creation/">Character Creation<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="//localhost:1313/character-creation/quick-start/">Quick Start</a></li>
-<li class=""><a href="//localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
 </li>
