--- a/public/History/index.html
+++ b/public/History/index.html
@@ -49,7 +49,7 @@ The First Era - Rule of the Dragon Gods ~20,000 Years Not much is know about thi
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
