--- a/public/geography/dragons/thel/index.html
+++ b/public/geography/dragons/thel/index.html
@@ -44,7 +44,7 @@ Population The land has a population of just over a million people total spread 
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
