--- a/public/geography/free-peoples/storm-riders/index.html
+++ b/public/geography/free-peoples/storm-riders/index.html
@@ -47,7 +47,7 @@ Extremely little is known about these peoples. In the modern period, the Storm R
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
