--- a/public/geography/free-peoples/twin-cities/index.html
+++ b/public/geography/free-peoples/twin-cities/index.html
@@ -44,7 +44,7 @@ The southern city is called Port Miracle, situated on the Gulf of Miracle it sta
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
