--- a/public/geography/grave/index.html
+++ b/public/geography/grave/index.html
@@ -44,7 +44,7 @@ Chaotic magic collects in the basin, and wickedly powerful monsters spawn out of
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
