--- a/public/geography/index.html
+++ b/public/geography/index.html
@@ -49,7 +49,7 @@ Free Peoples Every single city-state, village, town, nomadic tribe, is a “Free
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
@@ -122,8 +122,6 @@ Free Peoples Every single city-state, village, town, nomadic tribe, is a “Free
 <li class=" has-sub-menu"><a href="//localhost:1313/character-creation/">Character Creation<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="//localhost:1313/character-creation/quick-start/">Quick Start</a></li>
-<li class=""><a href="//localhost:1313/character-creation/races/">Races</a></li>
 </ul>
   
 </li>
