--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@ The world is covered in the ruins of an empire of the old age, brought low by th
 <ul>
 <li id="home" class=""><a href="/">Home</a></li>
 <li id="map" class=""><a href="/images/maps/tuummundis.png">Map</a></li>
-<li id="foundry" class=""><a href="">Foundry</a></li></ul>
+<li id="foundry" class=""><a href="http://fitzyshouse.duckdns.org:30000/">Foundry</a></li></ul>
 </nav>
 </div>
 
